# wasolution

./: .clangd  .env.example  .gitignore  CMakeLists.txt  CMakelists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.cpp
.VSCodeCounter/2025-06-12_16-40-22/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-12_16-41-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: cmake-single-platform.yml
dependencies/: dotenv.h
docs/: api.md  docker-deploy.md
src/: constants.h  main.cpp  main.rs
src/api/: api_constants.cpp  api_constants.h  cloud.rs  evolution.cpp  evolution.h  evolution.rs  mod.rs  wuzapi.cpp  wuzapi.h  wuzapi.rs
src/cloud/: cloud_api.cpp  cloud_api.h  cloud_constants.h
src/config/: config.cpp  config.h  config.rs
src/constants/: consts.rs
src/database/: connect.rs  database.cpp  database.h  delete.rs  fetch.rs  insert.rs  mod.rs
src/handler/: handler.cpp  handler.h  handler.rs
src/logger/: logger.cpp  logger.h  logger.rs
src/router/: routes.rs
src/webhook/: webhook.cpp  webhook.h  webhook_constant.h
